fixed table style for vertical-align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,6 @@ table#table-transition .flip-list-move {
   font-weight: bold;
 }
 
-
 /* polygon */
 #polygon h2, h3, h4 {
   font-weight: bold;
@@ -192,6 +191,10 @@ table#table-transition .flip-list-move {
 .text-purple-bright {
   color: #7952b3;
   font-weight: bolder;
+}
+
+.table tbody tr td{
+  vertical-align: middle;
 }
 
 .ranklist {
